# tablemate

./: .gitignore  pyproject.toml
configs/: example_snipe.yaml
deploy/: secondary-ips.service  secondary-ips.sh  setup-ec2.sh  tablement.service  update.sh
migrations/: 001_drop_intelligence.sql  002_inline_poll_snapshots.sql  003_curated_restaurants.sql  004_reservation_groups.sql  005_more_curated_restaurants.sql  006_add_restaurants_batch2.sql  007_add_restaurants_batch3.sql  008_add_missing_columns.sql  009_add_is_hot.sql  010_scout_system.sql  011_scout_redesign.sql  012_scout_polling_windows.sql  013_scout_v3.sql  014_fix_drop_policies_and_add_restaurants.sql  015_add_notification_email.sql  016_known_slots.sql  017_add_tonino_boston.sql  018_platform_tags_and_opentable.sql  019_opentable_auth.sql  020_add_pink_door_seattle.sql  021_admin_features.sql  022_fix_pink_door_drop_days.sql  023_referral_discount_flag.sql  024_shorten_taglines.sql  025_subscription_columns.sql  026_first_name.sql  027_fix_transaction_types.sql
scripts/: analyze_slots.py  check_drop_sync.py  migration_add_credits.sql  reset_all.py  resolve_venue_ids.py  supabase_schema.sql  test_proxy.py
src/tablement/: __init__.py  __main__.py  api.py  auth.py  cli.py  config.py  errors.py  fingerprint.py  models.py  notifications.py  proxy.py  scheduler.py  selector.py  sniper.py  venue.py
src/tablement/web/: ai.py  (+12 more)
tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_fingerprint.py  test_proxy.py  test_scheduler.py  test_selector.py  test_sniper.py  test_speed_optimizations.py
(+38 files in other folders)
